--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,19 @@ h1 {
     font-weight: normal;
 }
 
-header {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 80px 0 80px;
+    margin: 0 5vw;
+    min-height: 10vh;
+}
+
+.navbarContent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 85%;
 }
 
 #logo {
@@ -25,7 +33,7 @@ header {
     display: flex;
     justify-content: space-between;
     gap: 37px;
-    padding: 15px;
+    list-style: none;
 }
 
 .openlab_dropdown {
@@ -58,11 +66,10 @@ a:hover {
 #pridaj_sa_k_nam {
     background-color: #3597ff;
     color: white;
-    padding: 5px 20px;
-    margin: 12px;
+    padding: 15px 20px;
     border-radius: 10px;
     border: none;
-    height: 48px;
+    cursor: pointer;
 }
 
 #pridaj_sa_k_nam>p {
